fix: ajuste no y-overflow da home

--- a/src/app/modules/home/pages/home/home.component.css
+++ b/src/app/modules/home/pages/home/home.component.css
@@ -53,6 +53,7 @@
     padding: 0;
     margin: 0.9vh;
     line-height: 1.1;
+    overflow-y: hidden;
 }
 
 .hero p {
